# event-pred

./: .gitignore  README.md  requirements.txt
scripts/: data_split_by_month.py  data_split_odd_even_months.py  fetch_kalshi_data.py  view_parquet.py
stg_infra/: README.md  pyproject.toml  setup.py
stg_infra/examples/: event_pairs_arb_baseline.py  kalshi_example.py  kalshi_traintest.py
stg_infra/stg/: analysis.py  core.py  util.py
stg_infra/stg/adapters/: kalshi.py
stg_infra/stg/builders/: builder.py
stg_infra/stg/edges/: kalshi.py  strategies.py
stg_infra/stg/events/: config.py  core_cpi.py  cpi.py  fed.py  gdp.py  implied.py  payrolls.py  recession.py  unemployment.py
stg_infra/stg/io/: __init__.py  cde_export.py  kalshi.py  loaders.py
stg_infra/stg/labels/: kalshi.py
stg_infra/stg/nodes/: kalshi.py  strategies.py
stg_infra/stg/pairs/: __init__.py  config.py  kalshi_inputs.py  pipeline.py  selection.py  stats.py  tradable_proxy.py
stg_infra/stg/strategies/: features.py  post_process.py  protocols.py
stg_infra/stg/temporal/: __init__.py  interpolation.py  strategies.py
stg_infra/tests/: test_all.py
